# froql

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  justfile  todo.org
derive/: Cargo.toml
froql/: Cargo.toml
froql/benches/: my_benchmark.rs
froql/src/: archetype.rs  bookkeeping.rs  component.rs  debug.rs  entity_store.rs  entity_view_deferred.rs  entity_view_mut.rs  layout_vec.rs  lib.rs  query_helper.rs  relation.rs  relation_vec.rs  util.rs  world.rs
froql/tests/it/: deferred.rs  entity_view.rs  main.rs  manual_query.rs  proc_query.rs  relation.rs  singleton.rs  world.rs
froql/tests/it/manual_query/: mod.rs  optional_component.rs  relation.rs  trivial.rs
froql_macro/: Cargo.toml
froql_macro/src/: generator.rs  generator_nodes.rs  lib.rs  macro_error.rs  parser.rs
froql_macro/src/generator/: join_order.rs  nodes.rs
froql_macro/src/generator/nodes/: relation_join.rs  yield_result.rs
froql_macro/src/generator/nodes/snapshots/: froql_macro__generator__nodes__relation_join__test__relation_join_constraint-2.snap  froql_macro__generator__nodes__relation_join__test__relation_join_optional-2.snap  froql_macro__generator__nodes__relation_join__test__relation_join_unequality-2.snap
froql_macro/src/generator_nodes/: archetype_start.rs  invar_start.rs  relation_helper.rs  relation_join.rs  types.rs  yield_result.rs
froql_macro/src/generator_nodes/snapshots/: froql_macro__generator_nodes__archetype_start__test__normal.snap  froql_macro__generator_nodes__relation_join__test__relation_join_constraint-2.snap  froql_macro__generator_nodes__relation_join__test__relation_join_optional-2.snap  froql_macro__generator_nodes__relation_join__test__relation_join_unequality-2.snap
froql_macro/src/snapshots/: froql_macro__generator__test__generate_resumable_query_closure.snap  froql_macro__generator__test__invar.snap  froql_macro__generator__test__optional_component-2.snap  froql_macro__generator__test__optional_component.snap  froql_macro__generator__test__relation_outvar.snap  froql_macro__generator__test__unequals.snap  froql_macro__generator_nodes__test__relation_join_unequality-2.snap
src/: archetype.rs  bookkeeping.rs  lib.rs  (+8 more)
(+29 files in other folders)
