[workspace]
resolver = "3"
members = [ 
    "froql", 
    "froql_macro",
    "examples/*", "docs/book_test",
]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"
authors = ["kampffrosch94"]
repository = "https://github.com/kampffrosch94/froql"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
