[package]
name = "froql"
version = "0.1.0"
description = "an in memory query dsl"

authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
categories = ["data-structures", "game-development"]
keywords = ["gamedev", "dsl"]
readme = "../README.md"

[features]
manual_registration = []

[dependencies]
hi_sparse_bitset = "0.6.1"
froql_macro = { version = "0.1.0", path = "../froql_macro" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
insta = "1.42.0"

[[bench]]
name = "my_benchmark"
harness = false
