[package]
name = "froql_macro"
version = "0.1.0"
description = "proc_macro crate for froql"

authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
#rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]

[dev-dependencies]
insta = "1.42.0"
